changed form image

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                         <input required type="number" min="1" max="10000" name="number of pages" id="numOfPages">
                     </div>
                     <div class="wrapper was-it-read">
-                        <label for="was it read?">Was it read?</label>
-                        <input type="checkbox" name="was it read?" id="wasRead">
+                        <label for="read">Was it read?</label>
+                        <input type="checkbox" name="read" id="wasRead">
                     </div>
                     <div class="wrapper">
                         <label for="image">Book image</label>
