--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
 <body>
     <main class="main">
-        <button type="button" onclick="toggleFormVisibility()" class="new-book-button" id="addBookButton">
+        <div class="mobile-btn-holder hidden">
+            <button class="mobile-add-book-btn" onclick="toggleFormVisibility()"></button>
+        </div>
+        <button type="button" onclick="toggleFormVisibility()" class="new-book-button left-side-button" id="addBookButton">
             Add a new book
         </button>
         <div class="form-container hidden" id="formContainer">
@@ -46,6 +49,8 @@
             </fieldset>
         </div>
         <div id="book-container" class="book-container">
+            </button>
+        </div>
     </main>
     <script src="script.js" defer></script>
 </body>
